tests/misspelt-rule.good
pm: script execution error --- traceback follows:
pm:   misspelt-rule.pm:26
pm: error: test2XXX could not be found in any applicable scope
